Fixed the ajax-loader and the z-index of some of the elements

--- a/app/css/gsa.scss
+++ b/app/css/gsa.scss
@@ -144,7 +144,7 @@ footer {
     right: 0px;
     height: $header-height;
     text-align: center;
-    z-index: 1;
+    z-index: 5;
     button {
         border-radius: 0;
         color: #fff;
@@ -465,7 +465,7 @@ footer {
         position: absolute;
         top: 100%;
         width: 100%;
-        z-index: 10;
+        z-index: 1;
         
         li {
             list-style-type: none;
@@ -549,10 +549,15 @@ footer {
 .row-centered {
     text-align:center;
 }
+
 .col-centered {
     display:inline-block;
     /* inline-block space fix */
     margin-right:-4px;
+}
+
+body .ajax-loading .loading {
+  background: url('../assets/ajax-loader.gif');
 }
 
 @-moz-keyframes fadein {
